--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.8",
     "lucide-react": "^0.474.0",
-    "motion": "^12.0.8",
+    "motion": "^12.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
